--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
